{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 64,
  "lineage": "adf2031b-61ff-0c26-34bb-dccc480268df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4b3481b37cdd6f8",
            "arn": "arn:aws:ec2:us-east-1:909614386406:elastic-ip/eipalloc-0d4b3481b37cdd6f8",
            "domain": "vpc",
            "id": "eipalloc-0d4b3481b37cdd6f8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-93-28-17.compute-1.amazonaws.com",
            "public_ip": "3.93.28.17",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:internet-gateway/igw-0b8733c35e272f11c",
            "id": "igw-0b8733c35e272f11c",
            "owner_id": "909614386406",
            "region": "us-east-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4b3481b37cdd6f8",
            "association_id": "eipassoc-014d329795a69e58e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-049b26a13a5d4201c",
            "network_interface_id": "eni-0706ebe6a19ff101f",
            "private_ip": "10.0.72.157",
            "public_ip": "3.93.28.17",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e3c4a7faad1085bc",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "nat-049b26a13a5d4201c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ab4bd7b7ba44ea741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-049b26a13a5d4201c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab4bd7b7ba44ea74",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0ab4bd7b7ba44ea74"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8733c35e272f11c",
            "id": "r-rtb-0d10e0aff5dad50f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d10e0aff5dad50f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0d10e0aff5dad50f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:route-table/rtb-0ab4bd7b7ba44ea74",
            "id": "rtb-0ab4bd7b7ba44ea74",
            "owner_id": "909614386406",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "rtb-0ab4bd7b7ba44ea74",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:route-table/rtb-0d10e0aff5dad50f1",
            "id": "rtb-0d10e0aff5dad50f1",
            "owner_id": "909614386406",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "rtb-0d10e0aff5dad50f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0284fc37030934c",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab4bd7b7ba44ea74",
            "subnet_id": "subnet-0f14245a4d7b63790"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "rtbassoc-0e0284fc37030934c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca1c69459d9589d7",
            "region": "us-east-1",
            "route_table_id": "rtb-0ab4bd7b7ba44ea74",
            "subnet_id": "subnet-04287bdfac09af3f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "rtbassoc-0ca1c69459d9589d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062f4396dd4a202af",
            "region": "us-east-1",
            "route_table_id": "rtb-0d10e0aff5dad50f1",
            "subnet_id": "subnet-0e3c4a7faad1085bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "rtbassoc-062f4396dd4a202af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e3780c80bffed9f",
            "region": "us-east-1",
            "route_table_id": "rtb-0d10e0aff5dad50f1",
            "subnet_id": "subnet-01d366565da7cb46d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "rtbassoc-00e3780c80bffed9f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:subnet/subnet-0f14245a4d7b63790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f14245a4d7b63790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909614386406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "subnet-0f14245a4d7b63790",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:subnet/subnet-04287bdfac09af3f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04287bdfac09af3f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909614386406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "subnet-04287bdfac09af3f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:subnet/subnet-0e3c4a7faad1085bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3c4a7faad1085bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909614386406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "subnet-0e3c4a7faad1085bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:subnet/subnet-01d366565da7cb46d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d366565da7cb46d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909614386406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b27508a28a2d2b80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "subnet-01d366565da7cb46d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909614386406:vpc/vpc-0b27508a28a2d2b80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078dcaba9d0d1cf14",
            "default_route_table_id": "rtb-00d420dd8a746600a",
            "default_security_group_id": "sg-0e627512b04f73b6f",
            "dhcp_options_id": "dopt-079b174b1c12c476a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b27508a28a2d2b80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d420dd8a746600a",
            "owner_id": "909614386406",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-1776351735"
            },
            "tags_all": {
              "Name": "vpc-1776351735"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909614386406",
            "id": "vpc-0b27508a28a2d2b80",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.external.vpc_name"
          ]
        }
      ]
    }
  ]
}